Release 1.19.2